traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:13: error: type mismatch;
 found   : Unit
 required: Boolean
  if( a = large){
        ^