traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  while(!posFin){
    tp()
  }
  
  
}

var large = getMondeLargeur()-1
var hauteur = getMondeHauteur()-1

def posFin(): Boolean = {
  var a =getX()
  if( a = large){
    return true
  }else{
    return false
  }
}

def tp(){
  if(getY() != hauteur-1){
    setPos(getX(),getY()+1)
  }else{
    setPos(getX()+1,0)
  }
}